--- a/MvcApplication1/Web.config
+++ b/MvcApplication1/Web.config
@@ -14,12 +14,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="AWSAccessKey" value="this is a secret"/>
     <add key="AWSSecretKey" value="so is this"/>
-  </appSettings>
+  </appSettings>    
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
-    <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880"/>
-    </authentication>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers"/>
@@ -36,11 +33,6 @@
         <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/"/>
       </providers>
     </profile>
-    <membership defaultProvider="DefaultMembershipProvider">
-      <providers>
-        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
-      </providers>
-    </membership>
     <roleManager defaultProvider="DefaultRoleProvider">
       <providers>
         <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/"/>
@@ -51,6 +43,20 @@
         <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection"/>
       </providers>
     </sessionState>
+    <membership defaultProvider="MyADMembershipProvider">
+      <providers>
+        <add
+        name="MyADMembershipProvider"
+        type="CloudScheduler.Infrastructure.MyADProvider"
+        connectionStringName="ADConnectionString"
+        attributeMapUsername="sAMAccountName"/>
+      </providers>
+    </membership>
+    
+    <!--Make sure you have fomrs authentication enabled.-->
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+    </authentication>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
@@ -70,10 +76,11 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MvcApplication1-20130612104035;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MvcApplication1-20130612104035.mdf"/>
-  </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <connectionStrings>
+    <!--add name="ADConnectionString" connectionString="LDAP://54.208.49.255:389" /-->
+    <add name="ADConnectionString" connectionString="LDAP://ricsvr4.ddig.com:389/CN=users,DC=ddig,DC=com" />
+  </connectionStrings>
 </configuration>
